# cookiecutter-pypackage

./: .pre-commit-config.yaml  404.html  MANIFEST  MANIFEST.in  README.md  cookiecutter.json  index.html  mkdocs.yml  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py  sitemap.xml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: build.yml  docs.yml  pypi.yml
contributing/: index.html
docs/: conf.py  prompts.rst
faq/: index.html
hooks/: pre_gen_project.py
installation/: index.html
pypackage/: index.html
tests/: test_bake_project.py
usage/: index.html
{{cookiecutter.github_repo_name}}/: LICENSE  README.md  mkdocs.yml  pyproject.toml  requirements_dev.txt  requirements_docs.txt  setup.py
{{cookiecutter.github_repo_name}}/.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
{{cookiecutter.github_repo_name}}/.github/workflows/: docs-build.yml  docs.yml  installation.yml  macos.yml  pypi.yml  ubuntu.yml  windows.yml
{{cookiecutter.github_repo_name}}/docs/: common.md  contributing.md  index.md  installation.md  usage.md  {{cookiecutter.project_slug}}.md
{{cookiecutter.github_repo_name}}/{{cookiecutter.project_slug}}/: common.py
